# crewai_agent_workforce

./: README.md  pyproject.toml
src/workers/: crew.py  main.py
src/workers/code/: backend_code.py  backend_code.txt  frontend_code.html  frontend_code.txt  product_spec.md  security_report.md  test_plan.md  test_plan.py
src/workers/config/: agents.yaml  tasks.yaml
