[project]
name = "workers"
version = "0.1.0"
description = "workers using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
workers = "workers.main:run"
run_crew = "workers.main:run"
train = "workers.main:train"
replay = "workers.main:replay"
test = "workers.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
